--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <article class="w-full bg-white shadow overflow-hidden rounded">
                 <a href="/articles/001-events.html" class="block">
-                    <img class="w-full h-56 object-cover" src="/assets/images/placeholder-1000x500.jpg" alt="Placeholder cover for GameMaker events article">
+                    <img class="w-full h-56 object-cover" src="/assets/images/placeholder-1000x500.png" alt="Placeholder cover for GameMaker events article">
                 </a>
                 <div class="p-6">
                     <h2 class="text-2xl font-bold text-gray-900 mb-2">
@@ -51,7 +51,7 @@
 
             <article class="w-full bg-white shadow overflow-hidden rounded">
                 <a href="/articles/002-movement.html" class="block">
-                    <img class="w-full h-56 object-cover" src="/assets/images/placeholder-1000x500.jpg" alt="Placeholder cover for GameMaker movement article">
+                    <img class="w-full h-56 object-cover" src="/assets/images/placeholder-1000x500.png" alt="Placeholder cover for GameMaker movement article">
                 </a>
                 <div class="p-6">
                     <h2 class="text-2xl font-bold text-gray-900 mb-2">
