year of site creation is updated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
 </head>
+
 <body class="bg-white font-sans text-gray-900">
 
     <nav class="w-full py-4 bg-blue-800 shadow">
@@ -40,6 +41,7 @@
       </header>
 
       
+    <!-- Out cool site! -->
     <!-- <header class="w-full container mx-auto">
         <div class="flex flex-col items-center py-12">
             <a class="font-bold text-gray-800 uppercase hover:text-gray-700 text-5xl" href="/index.html">
@@ -102,7 +104,7 @@
                 GameMaker Notes - a learning project
             </div>
             <div class="text-center text-xs text-gray-500 mt-2">
-                &copy; 2025
+                &copy; 2026
             </div>
         </div>
     </footer>
